--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -14,15 +14,13 @@
 
         <li data-target="#myCarousel" data-slide-to="2"></li>
 
-        <li data-target="#myCarousel" data-slide-to="3"></li>
-
     </ol>
 
     <div class="carousel-inner" role="listbox">
 
         <div class="item active">
 
-            <img src="{% static 'app/content/banner1.svg'%} " alt="Первый слайд" class="img-responsive" />
+            <img src="{% static 'app/content/index.jpg'%} " alt="Первый слайд" class="img-responsive" />
 
             <div class="carousel-caption" role="option">
 
@@ -44,7 +42,7 @@
 
         <div class="item">
 
-            <img src="{% static 'app/content/banner2.svg'%}" alt="Второй слайд"  class="img-responsive" />
+            <img src="{% static 'app/content/index2.jpg'%}" alt="Второй слайд"  class="img-responsive" />
 
             <div class="carousel-caption" role="option">
 
@@ -66,7 +64,7 @@
 
         <div class="item">
 
-            <img src=" {% static 'app/content/banner3.svg'%} " alt="Третий слайд"  class="img-responsive" />
+            <img src=" {% static 'app/content/index3.jpg'%} " alt="Третий слайд"  class="img-responsive" />
 
             <div class="carousel-caption" role="option">
 
